crates/nash-report/tests/can/snapshots/can__module__tests__module_shell_with_local_named_types.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (type pair, type wrappedPair, WrappedMaybe, Maybe(..))\n\ntype alias pair 'a 'b = ('a, 'b)\n\ntype alias wrappedPair 'a 'b = pair 'a 'b\n\ntype alias WrappedMaybe 'a = Maybe 'a\n\ntype Maybe 'a\n    = Just 'a\n    | Nothing\n"
---
Module {
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Explicit(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 66,
                    },
                    end: Position {
                        line: 1,
                        column: 71,
                    },
                },
                value: UnionOpen(
                    "Maybe",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 52,
                    },
                    end: Position {
                        line: 1,
                        column: 64,
                    },
                },
                value: Alias(
                    "WrappedMaybe",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 28,
                    },
                    end: Position {
                        line: 1,
                        column: 32,
                    },
                },
                value: Alias(
                    "pair",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 39,
                    },
                    end: Position {
                        line: 1,
                        column: 50,
                    },
                },
                value: Alias(
                    "wrappedPair",
                ),
            },
        ],
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 12,
                column: 1,
            },
        },
    ),
    decls: Empty,
    unions: [
        Located {
            region: Region {
                start: Position {
                    line: 9,
                    column: 1,
                },
                end: Position {
                    line: 12,
                    column: 1,
                },
            },
            value: Union {
                kind: Arrow(
                    Type,
                    Type,
                ),
                context: [
                    Implied {
                        trait_: QualifiedName {
                            home: ModuleName {
                                package: Some(
                                    PackageName {
                                        author: "nash",
                                        project: "core",
                                    },
                                ),
                                name: "Builtin",
                            },
                            name: "Big",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 10,
                                        column: 12,
                                    },
                                    end: Position {
                                        line: 10,
                                        column: 14,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                ],
                name: Located {
                    region: Region {
                        start: Position {
                            line: 9,
                            column: 6,
                        },
                        end: Position {
                            line: 9,
                            column: 11,
                        },
                    },
                    value: "Maybe",
                },
                parameters: [
                    "a",
                ],
                ctors: [
                    Ctor {
                        labels: None,
                        name: "Just",
                        index: 0,
                        arity: 1,
                        arguments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 10,
                                        column: 12,
                                    },
                                    end: Position {
                                        line: 10,
                                        column: 14,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                    Ctor {
                        labels: None,
                        name: "Nothing",
                        index: 1,
                        arity: 0,
                        arguments: [],
                    },
                ],
                alternatives: 2,
                options: Normal,
            },
        },
    ],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 5,
                    column: 1,
                },
            },
            value: Alias {
                kind: Arrow(
                    Type,
                    Arrow(
                        Type,
                        Type,
                    ),
                ),
                context: [],
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 12,
                        },
                        end: Position {
                            line: 3,
                            column: 16,
                        },
                    },
                    value: "pair",
                },
                parameters: [
                    "a",
                    "b",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 25,
                        },
                        end: Position {
                            line: 3,
                            column: 33,
                        },
                    },
                    value: Tuple {
                        first: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 26,
                                },
                                end: Position {
                                    line: 3,
                                    column: 28,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                        second: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 30,
                                },
                                end: Position {
                                    line: 3,
                                    column: 32,
                                },
                            },
                            value: Var(
                                "b",
                            ),
                        },
                        rest: [],
                    },
                },
            },
        },
        Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 1,
                },
                end: Position {
                    line: 7,
                    column: 1,
                },
            },
            value: Alias {
                kind: Arrow(
                    Type,
                    Arrow(
                        Type,
                        Type,
                    ),
                ),
                context: [],
                name: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 12,
                        },
                        end: Position {
                            line: 5,
                            column: 23,
                        },
                    },
                    value: "wrappedPair",
                },
                parameters: [
                    "a",
                    "b",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 32,
                        },
                        end: Position {
                            line: 5,
                            column: 42,
                        },
                    },
                    value: Alias {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "pair",
                        },
                        arguments: [
                            AliasArgument {
                                name: "a",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 37,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 39,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            },
                            AliasArgument {
                                name: "b",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 40,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 42,
                                        },
                                    },
                                    value: Var(
                                        "b",
                                    ),
                                },
                            },
                        ],
                        remaining: [],
                        target: Open(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 25,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 33,
                                    },
                                },
                                value: Tuple {
                                    first: Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 26,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 28,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                    second: Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 30,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 32,
                                            },
                                        },
                                        value: Var(
                                            "b",
                                        ),
                                    },
                                    rest: [],
                                },
                            },
                        ),
                    },
                },
            },
        },
        Located {
            region: Region {
                start: Position {
                    line: 7,
                    column: 1,
                },
                end: Position {
                    line: 9,
                    column: 1,
                },
            },
            value: Alias {
                kind: Arrow(
                    Type,
                    Type,
                ),
                context: [
                    Implied {
                        trait_: QualifiedName {
                            home: ModuleName {
                                package: Some(
                                    PackageName {
                                        author: "nash",
                                        project: "core",
                                    },
                                ),
                                name: "Builtin",
                            },
                            name: "Big",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 7,
                                        column: 36,
                                    },
                                    end: Position {
                                        line: 7,
                                        column: 38,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                ],
                name: Located {
                    region: Region {
                        start: Position {
                            line: 7,
                            column: 12,
                        },
                        end: Position {
                            line: 7,
                            column: 24,
                        },
                    },
                    value: "WrappedMaybe",
                },
                parameters: [
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 7,
                            column: 30,
                        },
                        end: Position {
                            line: 7,
                            column: 38,
                        },
                    },
                    value: Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "Maybe",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 7,
                                        column: 36,
                                    },
                                    end: Position {
                                        line: 7,
                                        column: 38,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                },
            },
        },
    ],
    binops: [],
}
