crates/nash-report/tests/can/snapshots/can__module__tests__private_union_not_importable.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Maybe exposing (Maybe)\n\nx = 1\n"
info: diagnostic
---
nash::names::import_exposing_not_found

  × The `Maybe` module does not expose `Maybe`:
   ╭─[src/Main.nash:3:24]
 2 │ 
 3 │ import Maybe exposing (Maybe)
   ·                        ─────
 4 │ 
   ╰────
  help: Check that the module exposes this name.
